...
              controller: tabController,
              tabs: <Widget>[
                Tab(
                  text: "Friends",
                ),
                Tab(
                  text: "To Do List",
                ),
              ],
              indicatorColor: Colors.pink,
              labelColor: Colors.black,
            ),
          ),
...
                              style: TextStyle(
                                fontSize: 15,
                                color: Colors.grey[500],
                              ),
                            ),
                            leading: Checkbox(
                              key: Key("taskCheckbox"),
                              value: task.status,
                              onChanged: (bool? value) {
                                if (context.read<UserProvider>().selected.id ==
                                    Me.myId)
                                  context
                                      .read<TodoListProvider>()
...
                                    Me.myId)
                                  showDialog(
                                    context: context,
                                    builder: (BuildContext context) =>
                                        AlertDialog(
                                      content: Text(
                                        "You cannot change the status of this task!",
                                        textAlign: TextAlign.center,
                                      ),
                                      actions: [
                                        Center(
                                          child: TextButton(
                                            onPressed: () {
...
  }

  //builds floating action button to add todo
  Widget floatingActionButton() {
    if (context.read<UserProvider>().selected.id == Me.myId) {
      return FloatingActionButton(
        key: Key("addTodoButton"),
        backgroundColor: Colors.pink,
        onPressed: () {
          showDialog(
            context: context,
            builder: (BuildContext context) => AlertDialog(
              title: Text("Add Task"),
...
