...
                                  fontSize: 18,
                                  color: Color.fromARGB(255, 115, 112, 112),
                                ),
                              ),
                              Padding(padding: EdgeInsets.only(top: 5)),
                              Text(
                                "Visit your profile",
                                style: TextStyle(
                                  fontSize: 15,
                                  color: Colors.grey[500],
                                ),
                              ),
                              Padding(padding: EdgeInsets.only(top: 20)),
...
